# solar-project

./: .env  .gitignore  config.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/torch/: Dockerfile  devcontainer.json  docker-compose.yml
jupyter/: 0-projectprepare.ipynb  1-load-data.ipynb  1-load-data_arch.ipynb  2-train_unet.ipynb  3-train_unet_dataset.ipynb
solar/: __init__.py  __main__.py  prepare_project.py  projectprepare.py  readtif.py  solar.py  vars.py
solar-project/: readtif.py
vendors/: logger.py
