[tool.poetry]
name = "solar-project"
version = "0.0.1"
description = ""
authors = ["akraradets <akraradets@gmail.com>"]
readme = "README.md"

packages = [
    { include = "solar-project" }
]

[tool.poetry.dependencies]
python = "^3.10"
gdal = "3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
