[tool.poetry]
name = "solar"
version = "0.0.1"
description = ""
authors = ["akraradets <akraradets@gmail.com>"]
readme = "README.md"

packages = [
    { include = "solar" }
]

[tool.poetry.dependencies]
python = "^3.10"
gdal = "3.4.1"
matplotlib = "^3.9.0"
rioxarray = "^0.15.6"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[tool.poe.tasks.run]
shell = "python3 solar-project"
envfile = ['.env']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
