[tool.poetry]
name = "solar"
version = "0.0.1"
description = ""
authors = ["akraradets <akraradets@gmail.com>"]
readme = "README.md"

packages = [
    { include = "solar" }
]

[tool.poetry.dependencies]
python = "^3.10"
gdal = "3.4.1"
matplotlib = "^3.9.0"
rioxarray = "^0.15.6"
toml = "^0.10.2"
geopandas = "^1.0.1"
segmentation-models = "^1.0.1"
rasterio = "^1.3.10"
tensorflow = {extras = ["and-cuda"], version = "^2.17.0"}
keras = "^3.4.1"
geo-rasterizer = "^0.2.2"
tqdm = "^4.66.4"
ipywidgets = "^8.1.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[tool.poe.tasks.run]
cmd = "python3 solar"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
